# DigiAsset_Core_Windows

./: CMakeLists.txt  readme.md
addtional_lib/lib/: boost_container-vc142-mt-x64-1_85.lib  boost_context-vc142-mt-x64-1_85.lib  boost_coroutine-vc142-mt-x64-1_85.lib  boost_date_time-vc142-mt-x64-1_85.lib  boost_exception-vc142-mt-x64-1_85.lib  boost_regex-vc142-mt-x64-1_85.lib  boost_system-vc142-mt-x64-1_85.lib  libcurl.lib  libmicrohttpd-dll.lib  pkgconf.lib  sqlite3.lib
cli/: CMakeLists.txt
json-rpc-cpp/include/jsonrpccpp/client/: client.h
json-rpc-cpp/lib/debug/: jsonrpccpp-client.lib  jsonrpccpp-common.lib  jsonrpccpp-server.lib
json-rpc-cpp/lib/release/: jsonrpccpp-client.lib  jsonrpccpp-common.lib  jsonrpccpp-server.lib
src/: CMakeLists.txt  Config.h  DigiByteCore.h  Log.cpp  Log.h  static_block.hpp
src/RPC/Methods/: listunspent.cpp
web/: CMakeLists.txt  main.cpp
